# pwn4heap

./: Disclaimer.md  LICENSE  README.md  pyproject.toml
src/2.23/: README.md
src/2.23/house_of_apple_five/: README.md  exploit.py
src/2.23/house_of_apple_four/: README.md  exploit.py
src/2.23/house_of_apple_one/: README.md  exploit.py
src/2.23/house_of_banana/: exploit.py
src/2.23/house_of_corrosion/: exploit.py  flag
src/2.23/house_of_force/: exploit.py  flag
src/2.23/house_of_fun/: exploit.py  flag
src/2.23/house_of_gods/: exploit.py  flag
src/2.23/house_of_gods_again/: exploit.py  flag
src/2.23/house_of_lore/: exploit.py
src/2.23/house_of_pig/: exploit.py  flag
src/2.23/house_of_pig_again/: exploit.py  flag
src/2.23/house_of_roman/: exploit.py  flag  run.sh
src/2.23/house_of_spirit/: exploit.py
src/2.23/unsafe_unlink/: exploit.py
src/2.23/unsorted_bin_attack_again/: exploit.py  flag
src/2.23/unsorted_bin_attack_bss/: exploit.py  flag
src/2.27/fast_bin_attack/: exploit.py  flag
src/2.27/fast_bin_reverse_into_tcache/: exploit.py
src/2.27/fast_bin_reverse_into_tcache_again/: exploit.py
src/2.27/house_of_apple_four/: README.md  exploit.py
src/2.27/house_of_apple_one/: README.md  exploit.py  flag
src/2.27/house_of_apple_seven/: README.md  exploit.py
src/2.27/house_of_apple_six/: README.md  exploit.py  flag
src/2.27/house_of_atum/: exploit.py  flag
src/2.27/house_of_botcake/: exploit.py
src/2.27/house_of_emma/: exploit.py  flag
src/2.27/house_of_emma_again/: exploit.py  flag
src/2.31/: README.md
src/2.39/: README.md
(+236 files in other folders)
