[project]
name = "pwn4heap"
version = "1.0.0"
description = "This repository is an enhanced and practical extension of the renowned **how2heap** tutorial."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pwntools==4.14.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = []
ignore = ["ALL"]

[tool.pyright]
typeCheckingMode = "off"
